--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 /model/*.hdf5
-/data/train/seis/*.dat
+/data/train/
+/data/validation/
+/check/
 #/src
 #/build
 #/libs
