--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,10 @@
 /model/*.hdf5
 /data/
 /check/
+/check1/
 /log/
-<<<<<<< HEAD
+/log1/
 /png/
-=======
->>>>>>> a410292426a18e49fbe6073fa2d71f9b0e218372
 #/src
 #/build
 #/libs
